# ChangeLog for app-portage/portage-bashrc-mv
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*portage-bashrc-mv-12.6 (20 Nov 2014)

  20 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support ccache-3.2

*portage-bashrc-mv-12.5 (21 Nov 2013)

  06 Jul 2014; Martin Väth <martin@mvath.de>:
  New style github tarball

  15 Mar 2014; Martin Väth <martin@mvath.de>:
  Use optfeature

  21 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-12.4 (01 Nov 2013)

  01 Nov 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-12.3 (15 Sep 2013)

  15 Sep 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-12.2 (27 Jul 2013)

  27 Jul 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-12.1 (13 Jul 2013)

  13 Jul 2013; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-12.0 (04 Nov 2012)

  01 Dev 2012; Martin Väth <martin@mvath.de>:
  Remove USE=eix; only log recommendation if appropriate

  04 Nov 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Globally rename GPO->PGO, gpo->pgo

*portage-bashrc-mv-11.7 (13 Oct 2012)

  13 Oct 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Parse first line in cflags correctly

*portage-bashrc-mv-11.6 (07 Oct 2012)

  07 Oct 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*portage-bashrc-mv-11.5 (07 Oct 2012)

  07 Oct 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Support gpo

*portage-bashrc-mv-11.4 (10 Sep 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  10 Sep 2012; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Rely that gold linker is used with clang:
  Do not filter -flto for USE_NONGNU

*portage-bashrc-mv-11.3 (08 Sep 2012)
