@@ -21,12 +21,22 @@ src_prepare() {
 }
 
 src_install() {
+	dodoc NEWS README
+	exeinto "/usr/share/doc/${PF}"
+	doexe fix-portage-2.2.15
+	docompress -x "/usr/share/doc/${PF}/fix-portage-2.2.15"
 	insinto /etc/portage
 	doins -r bashrc bashrc.d
 	docompress /etc/portage/bashrc.d/README
 }
 
 pkg_postinst() {
+	case ${REPLACING_VERSIONS} in
+	[0-9].*|1[0-2].*)
+		ewarn "Remember to run /usr/share/doc/${PF}/fix-portage-2.2.15"
+		ewarn "as the first command after upgrading to >=portage-2.2.15"
+		ewarn "See NEWS for details";;
+	esac
 	optfeature "improved mask handling" app-portage/eix
 	! test -d /var/cache/gpo || \
 		ewarn "Obsolete /var/cache/gpo found. Please remove"
